# glyph

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: glyph.md
hooks/: hooks.json
pipeline/: __init__.py  __main__.py  agg.py  errors.py  main.py  pii.py  renderer.py  schema.py  themes.py
resources/themes/: amber.json  asciinema.json  default.json  dracula.json  github-dark.json  github-light.json  gruvbox-dark.json  kanagawa.json  nord.json  solarized-light.json
tests/: conftest.py  test_agg.py  test_cli.py  test_errors.py  test_main.py  test_pii.py  test_renderer.py  test_schema.py  test_themes.py
tests/fixtures/: full_demo.json  invalid_beat.json  minimal.json  pii_leak.json
